[gd_scene load_steps=46 format=3 uid="uid://bwva31xchx53y"]

[ext_resource type="Script" path="res://scripts/ui/ingame_hud.gd" id="1_wqdty"]
[ext_resource type="Script" path="res://scripts/ui/animated_texture_rect.gd" id="2_0l26t"]
[ext_resource type="AudioStream" uid="uid://c774ar81oolsl" path="res://assets/audio/thunder.mp3" id="2_5jqlg"]
[ext_resource type="PackedScene" uid="uid://w4uhvou4x3k8" path="res://scenes/ui/damage_number.tscn" id="2_t8bg2"]
[ext_resource type="Script" path="res://scripts/ui/health_bar.gd" id="3_k02ls"]
[ext_resource type="Script" path="res://scripts/ui/level_bar.gd" id="3_rqouv"]
[ext_resource type="Texture2D" uid="uid://dla3ug2fgyo5i" path="res://assets/ui/heart_full.png" id="4_67ldf"]
[ext_resource type="Texture2D" uid="uid://cyg23bfejy1xl" path="res://assets/ui/heart_half.png" id="5_n1vqy"]
[ext_resource type="Texture2D" uid="uid://rfhr7sqdw1mn" path="res://assets/ui/time.png" id="6_k5ew3"]
[ext_resource type="Texture2D" uid="uid://deccd6qd60cdc" path="res://assets/ui/heart_empty.png" id="6_ye6n2"]
[ext_resource type="Texture2D" uid="uid://bhe57kuyg7f0t" path="res://assets/ui/power_ups/DAMAGE_ICON_2.png" id="8_1k3y3"]
[ext_resource type="Texture2D" uid="uid://crnrydcl7jj7q" path="res://assets/ui/power_ups/EXPLOSION_ICON.png" id="9_j6oyo"]
[ext_resource type="Texture2D" uid="uid://cjbowmsr4nv0h" path="res://assets/ui/power_ups/HP_ICON.png" id="10_is16u"]
[ext_resource type="Texture2D" uid="uid://dntg6w4kmp8ui" path="res://assets/ui/power_ups/LIFE_GEN_ICON.png" id="11_pny1g"]
[ext_resource type="Texture2D" uid="uid://sqirlrthwm54" path="res://assets/ui/power_ups/LIGHT_ICON.png" id="12_2pyig"]
[ext_resource type="Texture2D" uid="uid://bjpqo34w6v1c7" path="res://assets/ui/power_ups/MOVE_SPEED_ICON.png" id="13_byunk"]
[ext_resource type="Texture2D" uid="uid://dgjjsrholk0xf" path="res://assets/ui/pause_background.png" id="13_ll5g8"]
[ext_resource type="Texture2D" uid="uid://crcnn8dqsjcij" path="res://assets/ui/power_ups/PIERCE_ICON.png" id="14_0pjq1"]
[ext_resource type="FontFile" uid="uid://boudmqvb2luv3" path="res://assets/fonts/Junge-Regular.ttf" id="14_k517a"]
[ext_resource type="Texture2D" uid="uid://c7heiblu3a45n" path="res://assets/ui/panel-border-031.png" id="15_0obi7"]
[ext_resource type="Texture2D" uid="uid://mu118qcsip6j" path="res://assets/ui/power_ups/FIRE_RATE_ICON.png" id="15_3ehjm"]
[ext_resource type="Texture2D" uid="uid://57gv7pcnyeje" path="res://assets/ui/power_ups/PROJECTILES_ICON.png" id="16_fjvje"]
[ext_resource type="Shader" path="res://scenes/game/vignette.gdshader" id="16_tifuj"]
[ext_resource type="Script" path="res://scripts/components/vignette.gd" id="17_yfvvk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1h818"]
shader = ExtResource("16_tifuj")
shader_parameter/inner_radius = 0.1
shader_parameter/outer_radius = 0.5
shader_parameter/vignette_strength = 1.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = null
shader_parameter/player_coords = null

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ubp"]
atlas = ExtResource("6_k5ew3")
region = Rect2(0, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_716l6"]
atlas = ExtResource("6_k5ew3")
region = Rect2(156, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5cjm"]
atlas = ExtResource("6_k5ew3")
region = Rect2(312, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfi6g"]
atlas = ExtResource("6_k5ew3")
region = Rect2(468, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rau6e"]
atlas = ExtResource("6_k5ew3")
region = Rect2(624, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrvf8"]
atlas = ExtResource("6_k5ew3")
region = Rect2(780, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wc80"]
atlas = ExtResource("6_k5ew3")
region = Rect2(936, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_10fya"]
atlas = ExtResource("6_k5ew3")
region = Rect2(1092, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_npq7h"]
atlas = ExtResource("6_k5ew3")
region = Rect2(1248, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0kej"]
atlas = ExtResource("6_k5ew3")
region = Rect2(1404, 0, 156, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq5hw"]
atlas = ExtResource("6_k5ew3")
region = Rect2(1560, 0, 156, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6ix1e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ubp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_716l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5cjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfi6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rau6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrvf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wc80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10fya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npq7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0kej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq5hw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_xv5j4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(427.5, 747)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HUD:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Flash:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": [Color(0.580392, 0, 0.0117647, 0), Color(0.580392, 0, 0.0117647, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Death/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HUD:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_smc22"]
resource_name = "pause_start"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.686275)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(427.5, 747), Vector2(427.5, 185)]
}

[sub_resource type="Animation" id="Animation_djifv"]
resource_name = "pause_stop"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.686275), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(427.5, 185), Vector2(427.5, 747)]
}

[sub_resource type="Animation" id="Animation_4444v"]
resource_name = "thunder"
length = 0.400003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../vignette:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t8xun"]
_data = {
"RESET": SubResource("Animation_xv5j4"),
"pause_start": SubResource("Animation_smc22"),
"pause_stop": SubResource("Animation_djifv"),
"thunder": SubResource("Animation_4444v")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7fpr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bu82q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tmtcp"]
texture = ExtResource("15_0obi7")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ixrl"]

[node name="IngameHud" type="Control" node_paths=PackedStringArray("power_ups", "health_bar", "time_bar")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqdty")
power_ups = NodePath("HUD/Bottom/MarginContainer/VBoxContainer/PowerUpBar")
health_bar = NodePath("HUD/Bottom/MarginContainer/VBoxContainer/Healthbar")
time_bar = NodePath("HUD/Top/VBoxContainer/TimeBar")
thunder_sound = ExtResource("2_5jqlg")
damage_number = ExtResource("2_t8bg2")

[node name="Flash" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DamageNumbers" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1h818")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("17_yfvvk")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 16.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Top"]
layout_mode = 2

[node name="TimeBar" type="TextureRect" parent="HUD/Top/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_0l26t")
sprites = SubResource("SpriteFrames_6ix1e")

[node name="Bottom" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="HUD/Bottom"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Bottom/MarginContainer"]
layout_mode = 2

[node name="PowerUpBar" type="HBoxContainer" parent="HUD/Bottom/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_rqouv")
textures = Array[Texture2D]([ExtResource("8_1k3y3"), ExtResource("9_j6oyo"), ExtResource("10_is16u"), ExtResource("11_pny1g"), ExtResource("13_byunk"), ExtResource("14_0pjq1"), ExtResource("15_3ehjm"), ExtResource("16_fjvje"), ExtResource("12_2pyig")])

[node name="Healthbar" type="HBoxContainer" parent="HUD/Bottom/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
script = ExtResource("3_k02ls")
full = ExtResource("4_67ldf")
half = ExtResource("5_n1vqy")
empty = ExtResource("6_ye6n2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Pause")
libraries = {
"": SubResource("AnimationLibrary_t8xun")
}

[node name="Pause" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TextureRect" type="TextureRect" parent="Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.5
offset_top = 387.0
offset_right = 212.5
offset_bottom = 737.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_ll5g8")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Pause/TextureRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="Pause/TextureRect/MarginContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("14_k517a")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "[center]Pause[/center]
"
scroll_active = false

[node name="CenterContainer" type="CenterContainer" parent="Pause/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/TextureRect/CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Pause/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_color = Color(0.690196, 0.713726, 0.713726, 1)
theme_override_fonts/font = ExtResource("14_k517a")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7fpr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bu82q")
theme_override_styles/hover = SubResource("StyleBoxTexture_tmtcp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tmtcp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ixrl")
text = "Resume"

[node name="BackToMenu" type="Button" parent="Pause/TextureRect/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_disabled_color = Color(0.584314, 0.584314, 0.584314, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.91664, 0.91664, 0.91664, 1)
theme_override_colors/font_color = Color(0.690196, 0.713726, 0.713726, 1)
theme_override_fonts/font = ExtResource("14_k517a")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_f7fpr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bu82q")
theme_override_styles/hover = SubResource("StyleBoxTexture_tmtcp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_tmtcp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_7ixrl")
text = "Exit To Menu"

[connection signal="button_down" from="Pause/TextureRect/CenterContainer/VBoxContainer/Resume" to="." method="resume"]
[connection signal="button_down" from="Pause/TextureRect/CenterContainer/VBoxContainer/BackToMenu" to="." method="exit_to_menu"]
